[package]
name = "registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
es-bot = { path = "../" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.1.4", features = ["derive"] }
twilight-model = "0.15"
serde_json = "1.0"
